Estructura con GRID

--- a/floats.html
+++ b/floats.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Estructura flexbox</title>
+    <title>Estructura GRID</title>
     <link rel="stylesheet" href="floats.css">
 </head>
 <body>
@@ -12,9 +12,8 @@
         <div class="header">
             Cabezote
         </div>
-        <div class="wrapper">
-            <div class="menu">
-                Menu
+        <div class="menu">
+            Menu
                 <ul>
                     <li>1</li>
                     <li>2</li>
@@ -23,7 +22,6 @@
 
             </div>
             <div class="content">Contenido</div>
-        </div>
         <div class="footer">Pie de página</div>
     </div>
 </body>
